--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,174 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+.input-wrapper {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  margin-bottom: 32px;
+  margin-top: 36px;
+  margin-left: 156px;
+}
+
+#datetime-picker {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 8px;
+  width: 272px;
+  height: 40px;
+  font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: 1px solid 808080;
+    transition: background-color 0.3s ease;
+}
+
+#datetime-picker:hover {
+    border-color: #DADADA;
+}
+
+#datetime-picker:active {
+  border-color: #4E75FF;
+}
+
+#datetime-picker:disabled {
+   border-color: #808080;
+  background-color: #fafafa;
+  cursor: not-allowed;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background-color: #4E75FF;
+  color: #FFFFFF;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #6C8CFF;
+  color: #FFFFFF;
+}
+
+button:disabled {
+  background-color: #cfcfcf;
+  color: #989898;
+  cursor: not-allowed;
+}
+
+.timer {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  margin-left: 156px;
+}
+
+.field {
+  text-align: center;
+}
+
+.value {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.label {
+  display: block;
+  font-size: 1rem;
+}
+
+.button {
+  width: 360px;
+  height: 40px;
+  
+ font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 360px;
+  border-radius: 8px;
+  margin: 0 auto;
+}
+
+.form label {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    display: flex;
+    flex-direction: column;
+  
+}
+
+input[type='number'] {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  height: 40px;
+  transition: border-color 0.3s;
+}
+
+input[type='number']:hover {
+  border-color: #000;
+}
+
+input[type='number']:active {
+  border-color: #4E75FF;
+}
+
+fieldset {
+  border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+    align-items: center;
+  gap: 48px;
+  border: 1px solid #808080;
+}
+
+fieldset:hover,
+:focus {
+  border-color: #000;
+}
+
+legend {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    
+}
+
+fieldset label {
+  display: flex;
+    align-items: center;
+    gap: 8px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
